--- a/RealTimeMessage/package.json
+++ b/RealTimeMessage/package.json
@@ -18,6 +18,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@stomp/stompjs": "^7.1.1",
     "axios": "^1.9.0",
+    "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "sockjs-client": "^1.6.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
