--- a/RealTimeMessage/package.json
+++ b/RealTimeMessage/package.json
@@ -21,6 +21,7 @@
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.3.0",
     "sockjs-client": "^1.6.1",
+    "sweetalert2": "^11.22.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
